.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Replaced highlightsearchterms.js with the Plone trunk
  jquery.highlightsearchterms.js plugin. This removes the need to add
  searchterm= query parameters to search.pt results.
  Refs. http://dev.plone.org/plone/ticket/8770
  [mj]

- Add a link to log out from the logged_out template if logged in as a Zope
  user via basic HTTP Authentication and the standard logout failed.
  [davisagli]

- Removed the cut/copy/paste icons from the action menu in new sites, as they
  just add noise + more HTTP requests.
  [limi]

- Moved happytalk in site_feedback_template.pt and author_feedback_template.pt
  to bottom of emails, per http://dev.plone.org/plone/ticket/7001
  [jonstahl]
  
- Added precedence: bulk header to several PasswordReset's
  mail_password_template, per http://dev.plone.org/plone/ticket/7000 - still
  haven't added this header to CMFPlone templates.
  [jonstahl]

- Added the upgrade warning to the main control panel screen. This is the same
  as found on the new overview page.
  [hannosch]

- Changed the new default overview page to be a normal browser page and made
  it aware of multiple Plone sites in the root or in ZODB mountpoints.
  [hannosch, davisagli]

- Overwrote the Zope quick start page, with a more helpful Plone specific
  version as already found in the unified installer.
  [hannosch]

- Turned the new add Plone site button in the ZMI into a link. This allows us
  to get out of the frameset to the top.
  [hannosch]

- Add jQueryTools integration, using plone.app.jquerytools.
  [smcmahon]

- Updated our add site ZMI screen.
  [hannosch]

- Changed search.pt (plone_forms) and rss_template.pt (plone_templates) so they
  display fullname instead of creator. 
  [ralphjacobs]
