@@ -25,15 +25,6 @@ from Products.CMFCore.utils import ToolInit as CMFCoreToolInit
 from Products.CMFCore.utils import getToolByName
 from Products.PlonePAS.interfaces.plugins import IUserManagement
 
-# BBB Plone 4.0
-from zope.deprecation import __show__
-__show__.off()
-try:
-    from Products.LinguaPlone.interfaces import ITranslatable
-except ImportError:
-    from Products.CMFPlone.interfaces.Translatable import ITranslatable
-__show__.on()
-
 import transaction
 
 # Canonical way to get at CMFPlone directory
@@ -114,18 +105,6 @@ def isIDAutoGenerated(context, id):
         pass
 
     return False
-
-def lookupTranslationId(obj, page, ids):
-    implemented = ITranslatable.providedBy(obj)
-    if not implemented or implemented and not obj.isTranslation():
-        pageobj = getattr(obj, page, None)
-        if (pageobj is not None and
-            ITranslatable.providedBy(pageobj)):
-            translation = pageobj.getTranslation()
-            if (translation is not None and
-                translation.getId() in ids):
-                page = translation.getId()
-    return page
 
 def pretty_title_or_id(context, obj, empty_value=_marker):
     """Return the best possible title or id of an item, regardless
